# agentic-demos

./: .gitignore  README.md
google-genai-agent/: .env.example  README.md  agent.py  pyproject.toml
langchain-agent/: .env.example  README.md  agent.py  pyproject.toml
local-mcp-weather/: README.md  pyproject.toml  weather.py
openai-agent/: .env.example  README.md  agent.py  pyproject.toml
pydantic-ai-agent/: .env.example  README.md  agent.py  pyproject.toml
